[project]
name = "ai-nhl-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.2.0",
]


# ========== Ruff Configuration ==========
[tool.ruff]
line-length = 88

# Target your Python version
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (already default)
    "F",   # Pyflakes (already default) 
    "I",   # isort - import sorting
    "UP",  # pyupgrade - modernize Python syntax
    "B",   # flake8-bugbear - catch common bugs
    "SIM", # flake8-simplify - suggest simpler code
]
unfixable = ["F401"]

# Allow Ruff to fix issues automatically
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["weather-agent"]

[tool.ruff.format]
quote-style = "double"
